--- a/css/style.css
+++ b/css/style.css
@@ -67,15 +67,15 @@ font-variant: normal;
 
 }
 
-.myphoto{
+.photo1{
 width:300px;
-height:250px;
+height:200px;
 border-style:solid;
 border-width:5px;
 border-color:black;
 }
 
-.myself{
+.photo2{
 	width:300px;
 	height:350px;
 	border:5px solid black;
